--- a/exercise.html
+++ b/exercise.html
@@ -6,7 +6,7 @@
     <title>my-website</title>
 </head>
 <body>
-   <h1>האתר שלי</h1>
+   <h1>תרגיל 1 </h1>
    <a href="privatedetails.html"> קישור לפרטים אישיים</a>
    <br/>
    <a href="news.html">קישור לאתרי חדשות</a>
