add the new files

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>my-website</title>
 </head>
 <body>
-   <h1>תרגיל 1 </h1>
+   <h1>הפרוייקט שלי </h1>
    <a href="privatedetails.html"> קישור לפרטים אישיים</a>
    <br/>
    <a href="news.html">קישור לאתרי חדשות</a>
    <br/>
    <a href="videos.html">קישור לדף עם סרטונים</a>
+   <br/>
+   <a href="form1.html">צור קשר</a>
    <br/>
 </body>
 </html>
