--- a/news.html
+++ b/news.html
@@ -15,6 +15,7 @@
     <a href="https://news.walla.co.il/" target="_blank">walla</a>
         </li>
     </ol>
+    <img src="news.jpg" width="300">
     <br/>
     <a href="exercise.html">חזרה לדף הבית</a>
 </body>
