--- a/videos.html
+++ b/videos.html
@@ -7,14 +7,31 @@
 </head>
 <body>
     <h1>עמוד סרטונים</h1>
-    <ul>
-        <li>
-    <a href="https://youtu.be/_xn3uAHZHcc">סרטון של מישהי מנגנת בנבל</a>
-        </li>
-        <li>
-    <a href="https://youtu.be/oqxAJKy0ii4">טריילר למשחק הדיונון</a>
-    </li>
-    </ul>
+    <table border="10">
+        <tr>
+            <th> name </th>
+            <th>link</th>
+            <th>image</th>
+            <th> views</th>
+        </tr>
+        <tr>
+            <td>harp video</td>
+            <td><a href="https://youtu.be/_xn3uAHZHcc">סרטון של מישהי מנגנת בנבל</a>
+            </td>       
+            <td><img src="harp.png" width="200"></td>
+            <td>2.7M</td>
+
+
+        </tr>
+        <tr>
+            <td>squid game trailer</td>
+            <td><a href="https://youtu.be/oqxAJKy0ii4">טריילר למשחק הדיונון</a>
+            </td>  
+            <td> <img src="squidgame.png" width="200"></td>
+            <td>56M</td>
+        </table>
+        <br/>
+
     <a href="exercise.html">חזרה לדף הבית</a>
 </body>
 </html>
