add all the changes

--- a/news.html
+++ b/news.html
@@ -17,6 +17,6 @@
     </ol>
     <img src="news.jpg" width="300">
     <br/>
-    <a href="exercise.html">חזרה לדף הבית</a>
+    <a href="index.html">חזרה לדף הבית</a>
 </body>
 </html>
