--- a/privatedetails.html
+++ b/privatedetails.html
@@ -8,7 +8,7 @@
 <body>
     <p> אני נטע כהן, בת 20 מירושלים</p>
     <p>עושה שירות לאומי ואוהבת לנגן, להתאמן ולרקוד</p>
-    <a href="exercise.html">חזרה לדף הבית</a> 
+    <a href="index.html">חזרה לדף הבית</a> 
     <img src="https://cdn3.iconfinder.com/data/icons/flat-rounded-7/50/617-1024.png" width="300px">
 </body>
 </html>
