--- a/videos.html
+++ b/videos.html
@@ -32,6 +32,6 @@
         </table>
         <br/>
 
-    <a href="exercise.html">חזרה לדף הבית</a>
+    <a href="index.html">חזרה לדף הבית</a>
 </body>
 </html>
