--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-website</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>הפרוייקט שלי </h1>
-   <a href="privatedetails.html"> קישור לפרטים אישיים</a>
-   <br/>
-   <a href="news.html">קישור לאתרי חדשות</a>
-   <br/>
-   <a href="videos.html">קישור לדף עם סרטונים</a>
-   <br/>
-   <a href="form1.html">צור קשר</a>
-   <br/>
+   <h1 style="font-size: 32px; font-weight: 100; text-align: center;" >הפרוייקט שלי </h1>
+   <a id="privatedetailslink" class="links" href="privatedetails.html"> קישור לפרטים אישיים </a>
+   <a id="newslink" class="links" href="news.html">קישור לאתרי חדשות</a>
+   <a id="videoslink"class="links" href="videos.html">קישור לדף עם סרטונים</a>
+   <a id="contactlink" class="links" href="form1.html">צור קשר</a>
 </body>
 </html>
