--- a/news.html
+++ b/news.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>news</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> אתרי חדשות</h1>
     <ol>
         <li>
-    <a href="https://www.ynet.co.il/home/0,7340,L-8,00.html" target="_blank"> ynet</a>
+    <a class="newslinks" href="https://www.ynet.co.il/home/0,7340,L-8,00.html" target="_blank"> ynet</a>
         </li>
         <li>
-    <a href="https://news.walla.co.il/" target="_blank">walla</a>
+    <a class="newslinks" href="https://news.walla.co.il/" target="_blank">walla</a>
         </li>
     </ol>
-    <img src="news.jpg" width="300">
+    <img id="newsImg" src="newimg.png">
     <br/>
-    <a href="index.html">חזרה לדף הבית</a>
+    <a class="backtohm" href="index.html">חזרה לדף הבית</a>
 </body>
 </html>
