--- a/privatedetails.html
+++ b/privatedetails.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>פרטים אישיים</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p> אני נטע כהן, בת 20 מירושלים</p>
-    <p>עושה שירות לאומי ואוהבת לנגן, להתאמן ולרקוד</p>
-    <a href="index.html">חזרה לדף הבית</a> 
-    <img src="https://cdn3.iconfinder.com/data/icons/flat-rounded-7/50/617-1024.png" width="300px">
+    <h1>פרטים אישיים </h1>
+    <li> אני נטע כהן, בת 20 מירושלים</li>
+    <li>עושה שירות לאומי ואוהבת לנגן, להתאמן ולרקוד</li>
+    <br/>
+    <label for="gender">מגדר</label>
+<br/>
+<input name="gender" value="Female" type="radio">
+Female
+<br/>
+<input name="gender" value="male" type="radio">
+Male
+<br/>
+    <img id="img-pd" src="personaldetails.png" width="200px">
+    <br/>
+    <a class="backtohm" href="index.html">חזרה לדף הבית</a>
+     
+
 </body>
 </html>
