--- a/privatedetails.html
+++ b/privatedetails.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <h1>פרטים אישיים </h1>
-    <li> אני נטע כהן, בת 20 מירושלים</li>
-    <li>עושה שירות לאומי ואוהבת לנגן, להתאמן ולרקוד</li>
+    <p class="pd-text"> אני נטע כהן, בת 20 מירושלים</p>
+    <p class="pd-text">עושה שירות לאומי ואוהבת לנגן, להתאמן ולרקוד</p>
+
+        <img id="img-pd" src="personaldetails.png">
     <br/>
     <label for="gender">מגדר</label>
 <br/>
-<input name="gender" value="Female" type="radio">
+<input class="gender-pd" name="gender" value="Female" type="radio">
 Female
 <br/>
-<input name="gender" value="male" type="radio">
+<input class="gender-pd" name="gender" value="male" type="radio">
 Male
-<br/>
-    <img id="img-pd" src="personaldetails.png" width="200px">
-    <br/>
+
     <a class="backtohm" href="index.html">חזרה לדף הבית</a>
      
 
